Test Sandbox Project/src/objects/Learning__c.object
<CustomObject>
    <fields>
        <fullName>Current_Published_Version_Formula__c</fullName>
        <formula>IF(!ISBLANK(Current_Published_Version__c),HYPERLINK(&quot;/&quot;&amp;Current_Published_Version__c,&quot;Version &quot;&amp;TEXT(Current_Published_Version__r.Version__c),&quot;_self&quot;) ,&quot;&quot;)</formula>
        <label>Current Published Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Published_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Published Version</label>
        <referenceTo>Learning_Version__c</referenceTo>
        <relationshipLabel>Learnings</relationshipLabel>
        <relationshipName>Learnings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Preview_URL__c</fullName>
        <description>URL used for customer customization purposes, currently hidden from the layout and won&apos;t be used by the package</description>
        <label>Custom Preview URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_hours__c</fullName>
        <formula>if(!ISBLANK(Duration__c),
IF(Duration__c &gt; 59,
TEXT(FLOOR((Duration__c)/60))&amp;&quot; hr(s) &quot;&amp;TEXT(FLOOR(MOD((Duration__c)/60,1)*60))&amp;&quot; mins&quot;
,TEXT(FLOOR(Duration__c))&amp;&quot; mins&quot;
)
,&quot;&quot;)</formula>
        <label>Duration (hours)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Published_Formula__c</fullName>
        <formula>IF(Published__c,TRUE,FALSE)</formula>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sync_progress__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Enable this checkbox if you plan to add this learning to multiple training plans and you would like to keep progress in sync between plans</inlineHelpText>
        <label>Sync progress across assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_Image__c</fullName>
        <formula>CASE( RecordType.DeveloperName,
        &quot;Task&quot;, IMAGE(&quot;/resource/almond_app_icons/task.png&quot;,&quot;Task&quot;),
        &quot;Resource&quot;, IMAGE(&quot;/resource/almond_app_icons/resource.png&quot;,&quot;Task&quot;),
        &quot;Quiz&quot;,IMAGE(&quot;/resource/almond_app_icons/quiz.png&quot;,&quot;Task&quot;),
        IMAGE(&quot;/resource/almond_app_icons/custom.png&quot;,&quot;Custom&quot;))</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <label>Learning</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Description__c</columns>
        <columns>Duration__c</columns>
        <columns>Published__c</columns>
        <columns>Sync_progress__c</columns>
        <columns>Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Quizzes</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Description__c</columns>
        <columns>Duration__c</columns>
        <columns>Published__c</columns>
        <columns>Sync_progress__c</columns>
        <columns>Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Learning__c.Quiz</value>
        </filters>
        <label>Quizzes</label>
    </listViews>
    <listViews>
        <fullName>Resources</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Description__c</columns>
        <columns>Duration__c</columns>
        <columns>Published__c</columns>
        <columns>Sync_progress__c</columns>
        <columns>Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Learning__c.Resource</value>
        </filters>
        <label>Resources</label>
    </listViews>
    <listViews>
        <fullName>Tasks</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Description__c</columns>
        <columns>Duration__c</columns>
        <columns>Published__c</columns>
        <columns>Sync_progress__c</columns>
        <columns>Current_Published_Version_Formula__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Learning__c.Task</value>
        </filters>
        <label>Tasks</label>
    </listViews>
    <nameField>
        <label>Learning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learnings</pluralLabel>
    <recordTypes>
        <fullName>Quiz</fullName>
        <active>true</active>
        <description>Quiz</description>
        <label>Quiz</label>
    </recordTypes>
    <recordTypes>
        <fullName>Resource</fullName>
        <active>true</active>
        <description>Resource</description>
        <label>Resource</label>
    </recordTypes>
    <recordTypes>
        <fullName>Task</fullName>
        <active>true</active>
        <description>Task</description>
        <label>Task</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>LMS_Approval_Sharing__c</fullName>
        <label>LMS Approval Sharing</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>LMS_Sharing__c</fullName>
        <label>LMS Sharing</label>
    </sharingReasons>
</CustomObject>